--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@chenfengyuan/vue-carousel": "^2.0.0",
+    "swiper": "^11.2.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
