--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@chenfengyuan/vue-carousel": "^2.0.0",
     "swiper": "^11.2.7",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-carousel": "^0.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
